parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | STRING
  13      | FLOAT
  14      | MATRIX
  15      | VOID

  16  vdecl_list :
  17             | vdecl_list vdecl

  18  vdecl : typ ID SEMI
  19        | typ ID ASSIGN expr SEMI
  20        | typ ID ASSIGN INT LBRACKET row_list RBRACKET SEMI
  21        | typ ID ASSIGN FLOAT LBRACKET row_list RBRACKET SEMI

  22  row_list :
  23           | LBRACKET elems_list RBRACKET
  24           | row_list COMMA LBRACKET elems_list RBRACKET

  25  elems_list : LITERAL
  26             | elems_list COMMA LITERAL

  27  expr : LITERAL
  28       | FLIT
  29       | BLIT
  30       | ID
  31       | MX
  32       | expr PLUS expr
  33       | expr MINUS expr
  34       | expr TIMES expr
  35       | expr DIVIDE expr
  36       | expr MXPLUS expr
  37       | expr MXMINUS expr
  38       | expr MXMX expr
  39       | expr MXSCALE expr
  40       | expr TRANSPOSE
  41       | expr EQ expr
  42       | expr NEQ expr
  43       | expr LT expr
  44       | expr LEQ expr
  45       | expr GT expr
  46       | expr GEQ expr
  47       | expr AND expr
  48       | expr OR expr
  49       | MINUS expr
  50       | NOT expr
  51       | ID ASSIGN expr
  52       | ID LPAREN args_opt RPAREN
  53       | LPAREN expr RPAREN

  54  stmt : expr SEMI
  55       | RETURN expr_opt SEMI
  56       | LBRACE stmt_list RBRACE
  57       | IF LPAREN expr RPAREN stmt
  58       | IF LPAREN expr RPAREN stmt ELSE stmt
  59       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  60       | WHILE LPAREN expr RPAREN stmt

  61  stmt_list :
  62            | stmt_list stmt

  63  expr_opt :
  64           | expr

  65  args_opt :
  66           | args_list

  67  args_list : expr
  68            | args_list COMMA expr

  69  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (69)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (69)

	.  reduce 69


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	MATRIX  shift 9
	VOID  shift 10
	EOF  shift 11
	.  error

	vdecl  goto 12
	fdecl  goto 13
	typ  goto 14


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (13)

	.  reduce 13


state 8
	typ : STRING .  (12)

	.  reduce 12


state 9
	typ : MATRIX .  (14)

	.  reduce 14


state 10
	typ : VOID .  (15)

	.  reduce 15


state 11
	program : decls EOF .  (1)

	.  reduce 1


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (18)
	vdecl : typ . ID ASSIGN expr SEMI  (19)
	vdecl : typ . ID ASSIGN INT LBRACKET row_list RBRACKET SEMI  (20)
	vdecl : typ . ID ASSIGN FLOAT LBRACKET row_list RBRACKET SEMI  (21)

	ID  shift 15
	.  error


state 15
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (18)
	vdecl : typ ID . ASSIGN expr SEMI  (19)
	vdecl : typ ID . ASSIGN INT LBRACKET row_list RBRACKET SEMI  (20)
	vdecl : typ ID . ASSIGN FLOAT LBRACKET row_list RBRACKET SEMI  (21)

	LPAREN  shift 16
	SEMI  shift 17
	ASSIGN  shift 18
	.  error


state 16
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	MATRIX  shift 9
	VOID  shift 10
	RPAREN  reduce 6

	typ  goto 19
	formals_opt  goto 20
	formal_list  goto 21


state 17
	vdecl : typ ID SEMI .  (18)

	.  reduce 18


state 18
	vdecl : typ ID ASSIGN . expr SEMI  (19)
	vdecl : typ ID ASSIGN . INT LBRACKET row_list RBRACKET SEMI  (20)
	vdecl : typ ID ASSIGN . FLOAT LBRACKET row_list RBRACKET SEMI  (21)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	INT  shift 25
	FLOAT  shift 26
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 32


state 19
	formal_list : typ . ID  (8)

	ID  shift 33
	.  error


state 20
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 34
	.  error


state 21
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 35
	RPAREN  reduce 7


state 22
	expr : LPAREN . expr RPAREN  (53)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 36


state 23
	expr : MINUS . expr  (49)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 37


state 24
	expr : NOT . expr  (50)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 38


state 25
	vdecl : typ ID ASSIGN INT . LBRACKET row_list RBRACKET SEMI  (20)

	LBRACKET  shift 39
	.  error


state 26
	vdecl : typ ID ASSIGN FLOAT . LBRACKET row_list RBRACKET SEMI  (21)

	LBRACKET  shift 40
	.  error


state 27
	expr : LITERAL .  (27)

	.  reduce 27


state 28
	expr : ID .  (30)
	expr : ID . ASSIGN expr  (51)
	expr : ID . LPAREN args_opt RPAREN  (52)

	LPAREN  shift 41
	ASSIGN  shift 42
	RPAREN  reduce 30
	SEMI  reduce 30
	COMMA  reduce 30
	TRANSPOSE  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	TIMES  reduce 30
	DIVIDE  reduce 30
	EQ  reduce 30
	NEQ  reduce 30
	LT  reduce 30
	GT  reduce 30
	LEQ  reduce 30
	GEQ  reduce 30
	AND  reduce 30
	OR  reduce 30
	MXPLUS  reduce 30
	MXMINUS  reduce 30
	MXMX  reduce 30
	MXSCALE  reduce 30


state 29
	expr : FLIT .  (28)

	.  reduce 28


state 30
	expr : BLIT .  (29)

	.  reduce 29


state 31
	expr : MX .  (31)

	.  reduce 31


state 32
	vdecl : typ ID ASSIGN expr . SEMI  (19)
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)

	SEMI  shift 43
	TRANSPOSE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EQ  shift 49
	NEQ  shift 50
	LT  shift 51
	GT  shift 52
	LEQ  shift 53
	GEQ  shift 54
	AND  shift 55
	OR  shift 56
	MXPLUS  shift 57
	MXMINUS  shift 58
	MXMX  shift 59
	MXSCALE  shift 60
	.  error


state 33
	formal_list : typ ID .  (8)

	.  reduce 8


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 61
	.  error


state 35
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	MATRIX  shift 9
	VOID  shift 10
	.  error

	typ  goto 62


state 36
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : LPAREN expr . RPAREN  (53)

	RPAREN  shift 63
	TRANSPOSE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EQ  shift 49
	NEQ  shift 50
	LT  shift 51
	GT  shift 52
	LEQ  shift 53
	GEQ  shift 54
	AND  shift 55
	OR  shift 56
	MXPLUS  shift 57
	MXMINUS  shift 58
	MXMX  shift 59
	MXSCALE  shift 60
	.  error


state 37
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : MINUS expr .  (49)

	TRANSPOSE  shift 44
	RPAREN  reduce 49
	SEMI  reduce 49
	COMMA  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	TIMES  reduce 49
	DIVIDE  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	GT  reduce 49
	LEQ  reduce 49
	GEQ  reduce 49
	AND  reduce 49
	OR  reduce 49
	MXPLUS  reduce 49
	MXMINUS  reduce 49
	MXMX  reduce 49
	MXSCALE  reduce 49


state 38
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : NOT expr .  (50)

	TRANSPOSE  shift 44
	RPAREN  reduce 50
	SEMI  reduce 50
	COMMA  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	TIMES  reduce 50
	DIVIDE  reduce 50
	EQ  reduce 50
	NEQ  reduce 50
	LT  reduce 50
	GT  reduce 50
	LEQ  reduce 50
	GEQ  reduce 50
	AND  reduce 50
	OR  reduce 50
	MXPLUS  reduce 50
	MXMINUS  reduce 50
	MXMX  reduce 50
	MXSCALE  reduce 50


state 39
	vdecl : typ ID ASSIGN INT LBRACKET . row_list RBRACKET SEMI  (20)
	row_list : .  (22)

	LBRACKET  shift 64
	RBRACKET  reduce 22
	COMMA  reduce 22

	row_list  goto 65


state 40
	vdecl : typ ID ASSIGN FLOAT LBRACKET . row_list RBRACKET SEMI  (21)
	row_list : .  (22)

	LBRACKET  shift 64
	RBRACKET  reduce 22
	COMMA  reduce 22

	row_list  goto 66


state 41
	expr : ID LPAREN . args_opt RPAREN  (52)
	args_opt : .  (65)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	RPAREN  reduce 65

	expr  goto 67
	args_opt  goto 68
	args_list  goto 69


state 42
	expr : ID ASSIGN . expr  (51)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 70


state 43
	vdecl : typ ID ASSIGN expr SEMI .  (19)

	.  reduce 19


state 44
	expr : expr TRANSPOSE .  (40)

	.  reduce 40


state 45
	expr : expr PLUS . expr  (32)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 71


state 46
	expr : expr MINUS . expr  (33)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 72


state 47
	expr : expr TIMES . expr  (34)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 73


state 48
	expr : expr DIVIDE . expr  (35)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 74


state 49
	expr : expr EQ . expr  (41)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 75


state 50
	expr : expr NEQ . expr  (42)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 76


state 51
	expr : expr LT . expr  (43)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 77


state 52
	expr : expr GT . expr  (45)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 78


state 53
	expr : expr LEQ . expr  (44)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 79


state 54
	expr : expr GEQ . expr  (46)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 80


state 55
	expr : expr AND . expr  (47)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 81


state 56
	expr : expr OR . expr  (48)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 82


state 57
	expr : expr MXPLUS . expr  (36)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 83


state 58
	expr : expr MXMINUS . expr  (37)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 84


state 59
	expr : expr MXMX . expr  (38)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 85


state 60
	expr : expr MXSCALE . expr  (39)

	LPAREN  shift 22
	MINUS  shift 23
	NOT  shift 24
	LITERAL  shift 27
	ID  shift 28
	FLIT  shift 29
	BLIT  shift 30
	MX  shift 31
	.  error

	expr  goto 86


state 61
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (16)

	.  reduce 16

	vdecl_list  goto 87


state 62
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 88
	.  error


state 63
	expr : LPAREN expr RPAREN .  (53)

	.  reduce 53


state 64
	row_list : LBRACKET . elems_list RBRACKET  (23)

	LITERAL  shift 89
	.  error

	elems_list  goto 90


state 65
	vdecl : typ ID ASSIGN INT LBRACKET row_list . RBRACKET SEMI  (20)
	row_list : row_list . COMMA LBRACKET elems_list RBRACKET  (24)

	RBRACKET  shift 91
	COMMA  shift 92
	.  error


state 66
	vdecl : typ ID ASSIGN FLOAT LBRACKET row_list . RBRACKET SEMI  (21)
	row_list : row_list . COMMA LBRACKET elems_list RBRACKET  (24)

	RBRACKET  shift 93
	COMMA  shift 92
	.  error


state 67
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	args_list : expr .  (67)

	TRANSPOSE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EQ  shift 49
	NEQ  shift 50
	LT  shift 51
	GT  shift 52
	LEQ  shift 53
	GEQ  shift 54
	AND  shift 55
	OR  shift 56
	MXPLUS  shift 57
	MXMINUS  shift 58
	MXMX  shift 59
	MXSCALE  shift 60
	RPAREN  reduce 67
	COMMA  reduce 67


state 68
	expr : ID LPAREN args_opt . RPAREN  (52)

	RPAREN  shift 94
	.  error


state 69
	args_opt : args_list .  (66)
	args_list : args_list . COMMA expr  (68)

	COMMA  shift 95
	RPAREN  reduce 66


state 70
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : ID ASSIGN expr .  (51)

	TRANSPOSE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EQ  shift 49
	NEQ  shift 50
	LT  shift 51
	GT  shift 52
	LEQ  shift 53
	GEQ  shift 54
	AND  shift 55
	OR  shift 56
	MXPLUS  shift 57
	MXMINUS  shift 58
	MXMX  shift 59
	MXSCALE  shift 60
	RPAREN  reduce 51
	SEMI  reduce 51
	COMMA  reduce 51


state 71
	expr : expr . PLUS expr  (32)
	expr : expr PLUS expr .  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)

	TRANSPOSE  shift 44
	TIMES  shift 47
	DIVIDE  shift 48
	MXMX  shift 59
	MXSCALE  shift 60
	RPAREN  reduce 32
	SEMI  reduce 32
	COMMA  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	LT  reduce 32
	GT  reduce 32
	LEQ  reduce 32
	GEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	MXPLUS  reduce 32
	MXMINUS  reduce 32


state 72
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr MINUS expr .  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)

	TRANSPOSE  shift 44
	TIMES  shift 47
	DIVIDE  shift 48
	MXMX  shift 59
	MXSCALE  shift 60
	RPAREN  reduce 33
	SEMI  reduce 33
	COMMA  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	GT  reduce 33
	LEQ  reduce 33
	GEQ  reduce 33
	AND  reduce 33
	OR  reduce 33
	MXPLUS  reduce 33
	MXMINUS  reduce 33


state 73
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr TIMES expr .  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . MXPLUS expr  (36)
	expr : expr . MXMINUS expr  (37)
	expr : expr . MXMX expr  (38)
	expr : expr . MXSCALE expr  (39)
	expr : expr . TRANSPOSE  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)

	TRANSPOSE  shift 44
	RPAREN  reduce 34
	SEMI  reduce 34
	COMMA  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	TIMES  reduce 34
	DIVIDE  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LT  reduce 34
	GT  reduce 34
	LEQ  reduce 34
	GEQ  reduce 34
	AND  reduce 34
	OR  reduce 34
	MXPLUS  reduce 34
	MXMINUS  reduce 34
	MXMX  reduce 34
	MXSCALE  reduce 34

